# VoyageCraft-Agentic-Multi-Agent-Orchestrator-Travel-domain-

./: .gitignore  README.md
backend/: cli.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/agents/: base.py  budget.py  critic.py  destination_llm.py  planner.py
backend/app/: main.py
backend/app/routes/: plan.py
backend/orchestrators/: react_loop.py
backend/utils/: config.py  llm.py  trace.py  types.py
backend/voyagecraft_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
frontend/src/: types.ts
frontend/src/app/: page.tsx
frontend/src/lib/: api.ts
