[project]
name = "voyagecraft-backend"
version = "0.1.0"
description = "End-to-end multi-agent LLM orchestrator (backend)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "httpx>=0.27"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10"
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
